# psychological_test

./: .gitignore  README.md  pyproject.toml
app/: admin.py  models.py  views.py
app/migrations/: 0001_initial.py
app/templates/app/: index.html  quiz.html  results.html
mysite/: settings.py  urls.py
